- Renderer für Enums geschrieben - Print / Export-Buttons hinzugefügt - AdvancedSearchCriterias angepasst / verbessert / nationality hinzugefügt

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
@@ -159,3 +159,6 @@ comment = Kommentar
 showAnswered = beantwortete anzeigen
 showUnanswered = unbeantwortete anzeigen
 bmi = BMI
+
+export = Exportieren
+print = Drucken
