--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup.properties
@@ -15,6 +15,22 @@ AND = UND
 OR = ODER
 
 #Comparison2
+NATIONALITY_EQUALS = Patient ist aus
+NATIONALITY_NOT_EQUALS = Patient ist nicht aus
+NATIONALITY_LESS = -
+NATIONALITY_MORE = -
+ANAMNESIS_EQUALS = beantwortet mit
+ANAMNESIS_NOT_EQUALS = nicht beantwortet mit
+ANAMNESIS_LESS = Antwort höchstens
+ANAMNESIS_MORE = Antwort mindestens
+NUMERIC_EQUALS = =
+NUMERIC_NOT_EQUALS = ≠
+NUMERIC_LESS = <
+NUMERIC_MORE = >
+LANGSKILL_EQUALS = auf Niveau
+LANGSKILL_NOT_EQUALS = nicht auf Niveau
+LANGSKILL_LESS = auf niedrigerem Niveau als
+LANGSKILL_MORE = auf besserem Niveau als
 EQUALS = gleich wie
 NOT_EQUALS = ungleich
 LESS = weniger als
