- Replaced all enum renderers - Added Header widget.

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup.properties
@@ -15,6 +15,10 @@ AND = UND
 OR = ODER
 
 #Comparison2
+SCAR_EQUALS = Parient hat
+SCAR_NOT_EQUALS = Patient hat kein/e
+SCAR_LESS = -
+SCAR_MORE = -
 NATIONALITY_EQUALS = Patient ist aus
 NATIONALITY_NOT_EQUALS = Patient ist nicht aus
 NATIONALITY_LESS = -
