- Partially implemented the breadcrumb navigation logic - Deployed more Enum renderers - Improved the AdvancedSearchCriteriaTable

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup.properties
@@ -73,3 +73,8 @@ DSC = absteigend
 #TraitTypes
 TATTOO = Tätowierung
 NOT_TO_EXAMINE = Nicht untersuchen
+
+#Operation
+CREATE = Neu erstellen
+EDIT = Bearbeiten
+DETAILS = Details
