Add Support for nationality.

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup.properties
@@ -39,6 +39,9 @@ EQUALS = gleich wie
 NOT_EQUALS = ungleich
 LESS = weniger als
 MORE = mehr als
+#By Spec[
+NATIONALITY = Nationality
+#By Spec]
 
 #Gender
 MALE = männlich
