Feature #55 - Added english language support and language change dropdown - Resolved display bug (inclusion of default theme in fr.hd3d.html5.video.1.0.jar removed) - redesigned HeaderPanel

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
@@ -51,7 +51,7 @@ editAnamnesisValue = Anamnesewert bearbeiten
 editClinic = Spital bearbeiten
 editDoctor = Dozent bearbeiten
 editPatient = Patient bearbeiten
-email = E-Mail
+email = Email
 enterAnswer = Bitte Antwort eingeben...
 enterQuestion = Bitte Frage eingeben...
 examinationSchedule = Prüfungsplan
@@ -72,6 +72,7 @@ languageSkills = Sprachkenntnisse
 location = Ort
 log = Log
 logDetails = Log-Details
+logout = Abmelden
 male = Männlich
 masterData = Stammdaten
 maxCircuits = max. Parcours
@@ -108,6 +109,7 @@ save = Speichern
 scars = Narben
 searchField = Suche...
 searchFor = Suchen nach...
+selectLanguage = Sprache wählen:
 sendSummonings = Aufgebote versenden
 showAnswered = beantwortete anzeigen
 showUnanswered = unbeantwortete anzeigen
