Feature #40 (Miscellanneous) - Changed content of secretary field in doctors view - Changed Mouse-Over behavior of anamnesis table (sp sub view) - Added Enum renderers to anamnesisCheckDetails / edit / doctorsview - enabled animation in navigation - small ui improvements / corrections in StandardizedPatients - Fixed NullPointerException in AnamnesisPopup - changed display behaviour of criteria table - Started implementation of icon resource

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
@@ -63,7 +63,7 @@ field = Feld
 from = Von
 gender = Geschlecht
 generalInformation = Allgemeine Informationen
-googleMaps = Auf Google Maps anschauen
+googleMaps = Google maps
 height = Grösse
 iban = IBAN
 language = Sprache
