--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants_en.properties
@@ -63,7 +63,7 @@ field = Field
 from = From
 gender = Gender
 generalInformation = General Information
-googleMaps = View on Google maps
+googleMaps = Google maps
 height = Height
 iban = IBAN
 language = Language
