View code for feature#37

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
@@ -138,3 +138,7 @@ topicsAndSpec=topics & specification
 roleScriptTemplate=role script template
 roomMaterials=room materials
 #By SPEC End
+
+
+saveOrder=Save Order
+order=Order
