--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
@@ -162,3 +162,8 @@ bmi = BMI
 
 export = Exportieren
 print = Drucken
+
+insideTitle = inside title
+previousQuestion = previous question
+noTitle = This question has no title.
+previousTitle = previous title
