Feature #64 - Implemented reload of Tables upon update/delete/addition of datasets
Feature #40
- added translation for roles in navigation
- Made storage of quickSearchTerm in some activities "more permanent"
- Fixed minor layout bugs in Details- and Edit-Views

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
@@ -133,10 +133,10 @@ value = Wert
 weight = Gewicht
 yes = Ja
 #By SPEC Start
-role=role
-topicsAndSpec=topics & specification
-roleScriptTemplate=role script template
-roomMaterials=room materials
+role=Rolle
+topicsAndSpec=Themen & Spezifikation
+roleScriptTemplate=Rollenskriptvorlage
+roomMaterials=Raummaterialien
 #By SPEC End
 export = Exportieren
 print = Drucken
