--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup_en.properties
@@ -44,8 +44,8 @@ NATIONALITY = Nationality
 #By Spec]
 
 #Gender
-MALE = Male
-FEMALE = Weiblich
+MALE = male
+FEMALE = female
 
 #LangSkillLevel
 A1 = A1
@@ -81,3 +81,4 @@ NOT_TO_EXAMINE = Do not examine
 CREATE = Create new
 EDIT = Edit
 DETAILS = Details
+NEW = New created
