--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants_en.properties
@@ -129,3 +129,8 @@ user = User
 value = Value
 weight = Weight
 yes = Yes
+
+role=Role
+topicsAndSpec=Topics & specification
+roleScriptTemplate=Role script template
+roomMaterials=Room materials
