--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
@@ -137,6 +137,24 @@ role=Rolle
 topicsAndSpec=Themen & Spezifikation
 roleScriptTemplate=Rollenskriptvorlage
 roomMaterials=Raummaterialien
+roletopic=role topic
+slotUntilChange=slots until change
+studyYears=study year
+clinicalSpecialisation=Clinical Specialization
+#By Spec Assignment K
+TopicsAndSpecViewPopupXPosition=470
+TopicsAndSpecViewPopupYPosition=45
+
+TopicsAndSpecDetailsViewPopupXPosition=1120
+TopicsAndSpecDetailsViewPopupYPosition=45
+keyword=Keyword
+itemName=Item Name
+roleName=Role Name
+checkListItem=Checklist Item
+itemValue=Item Value
+addRoleTopic=Role Topic
+topic=Topic
+aviableRole=AvaiblRoles
 #By SPEC End
 export = Exportieren
 print = Drucken
