--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup.properties
@@ -82,3 +82,11 @@ CREATE = Neu erstellen
 EDIT = Bearbeiten
 DETAILS = Details
 NEW = New created
+
+#Study Year
+SJ1=SJ1
+SJ2=SJ2
+SJ3=SJ3
+SJ4=SJ4
+SJ5=SJ5
+SJ6=SJ6
