Feature #39 - changed Bank country to be OneToMany with Nationality - implemented display and edit fields for new entity fields in corresponding views

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
@@ -37,6 +37,7 @@ clinics = Spitäler
 comment = Kommentar
 comparison = Vergleich
 contactInfo = Kontaktinformationen
+country = Land
 createClinic = Spital erstellen
 createDoctor = Dozent erstellen
 criterion = Kriterium
@@ -74,6 +75,7 @@ log = Log
 logDetails = Log-Details
 logout = Abmelden
 male = Männlich
+maritalStatus = Zivilstand
 masterData = Stammdaten
 maxCircuits = max. Parcours
 maxStudents = max. Studenten
@@ -85,6 +87,7 @@ no = Nein
 noMatter = Macht nichts
 officeDetails = Sekretariat
 osces = OSCEs verwalten
+ownerName = Inhaber
 patient = Patient
 patientHas = Patient hat
 patientSpeaks = Patient spricht
@@ -115,6 +118,7 @@ showAnswered = beantwortete anzeigen
 showUnanswered = unbeantwortete anzeigen
 simPat = SimPat
 simulationPatients = Simulationspatienten
+socialInsuranceNo = SV-Nummer
 stationLength = Postenlänge
 street = Strasse
 
@@ -131,6 +135,7 @@ type = Typ
 user = Benutzer
 value = Wert
 weight = Gewicht
+workPermission = Arbeitsbewilligung
 yes = Ja
 #By SPEC Start
 role=Rolle
