--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup.properties
@@ -90,3 +90,14 @@ SJ3=SJ3
 SJ4=SJ4
 SJ5=SJ5
 SJ6=SJ6
+
+B = B-Bewilligung
+C = C-Bewilligung
+L = L-Bewilligung
+
+UNMARRIED = ledig
+MARRIED = verheiratet
+CIVIL_UNION = Partnerschaft
+DIVORCED = geschieden
+SEPARATED = getrennt
+WIDOWED = verwitwet
