--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup_en.properties
@@ -88,3 +88,14 @@ SJ1=SJ1
 SJ2=SJ2
 SJ3=SJ3
 SJ4=SJ4
+
+B = B-permit
+C = C-permit
+L = L-permit
+
+UNMARRIED = unmarried
+MARRIED = married
+CIVIL_UNION = civil union
+DIVORCED = divorced
+SEPARATED = separated
+WIDOWED = widowed
