--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants_en.properties
@@ -37,6 +37,7 @@ clinics = Clinics
 comment = Comment
 comparison = Comparison
 contactInfo = Contact details
+country = Land
 createClinic = Create clinic
 createDoctor = Create lecturer
 criterion = Criterion
@@ -74,6 +75,7 @@ log = Log
 logout = Logout
 logDetails = Log details
 male = male
+maritalStatus = Marital status
 masterData = Master data
 maxCircuits = max. circuits
 maxStudents = max. students
@@ -85,6 +87,7 @@ no = No
 noMatter = Don't care
 officeDetails = Office
 osces = Manage OSCEs
+ownerName = Owner
 patient = Patient
 patientHas = Patient has
 patientSpeaks = Patient speaks
@@ -115,6 +118,7 @@ showAnswered = Show answered
 showUnanswered = Show unanswered
 simPat = SimPat
 simulationPatients = Simulation patients
+socialInsuranceNo = Social Insurance No.
 stationLength = Station length
 street = Street
 students = Students
@@ -128,6 +132,7 @@ type = Type
 user = User
 value = Value
 weight = Weight
+workPermission = Work permission
 yes = Yes
 
 role=Role
