--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
@@ -182,3 +182,17 @@ roomMaterialPricePerDay = price per day
 
 saveOrder=Save Order
 order=Order
+
+#SPEc Assignment C
+
+majorLbl=Major Changes
+minorLbl=Minor Changes
+roleDetail = Role Detail
+roleParticipants = Role Participants
+keywords = Keywords
+learningObjectives = Learning Objectives
+shortName = Short Name
+roleType = Role Type
+addRole = Add Role
+editRole = Edit Role
+#By SPEC End
