--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants_en.properties
@@ -149,3 +149,17 @@ roomMaterialPrice = price
 roomMaterialPriceType = price type
 roomMaterialPricePerPiece = price per piece
 roomMaterialPricePerDay = price per day
+
+#SPEc Assignment C
+
+majorLbl=Major Changes
+minorLbl=Minor Changes
+roleDetail = Role Detail
+roleParticipants = Role Participants
+keywords = Keywords
+learningObjectives = Learning Objectives
+shortName = Short Name
+roleType = Role Type
+addRole = Add Role
+editRole = Edit Role
+#By SPEC End
