--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
@@ -192,4 +192,12 @@ shortName = Short Name
 roleType = Role Type
 addRole = Add Role
 editRole = Edit Role
+#Assignment G
+number = number
+forWho = for who
+#Assignment H
+addRoleFile=Neue Rolle Datei
+filePath=Weg
+fileDescription=Beschreibung
+imageUpload=Bild erfolgreich hochgeladen
 #By SPEC End
