--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants_en.properties
@@ -188,4 +188,15 @@ shortName = Short Name
 roleType = Role Type
 addRole = Add Role
 editRole = Edit Role
+#Assignment G
+number = number
+forWho = for who
+#Assignment H
+AddRoleFile=Add Role File
+filePath=Path
+fileDescription=Description
+imageUpload=Image uploaded successfully
+#By SPEC End
+
+
 #By SPEC End
