--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
@@ -131,6 +131,8 @@ roomMaterials=Raummaterialien
 roomNumber = Raum-Nr.
 rooms = Räume
 roomWidth = Breite
+send = send to dmz
+pull = pull from dmz
 save = Speichern
 saveOrder=Save Order
 scars = Narben
