Feature #55 - Updated some translations - Added some iconbuttons - Restructured navigation

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
@@ -67,7 +67,7 @@ export = Exportieren
 exportBellSchedule = Klingelplan erstellen
 female = Weiblich
 field = Feld
-filterTitle = Filter Title
+filterTitle = Titel-Filter
 from = Von
 gender = Geschlecht
 generalInformation = Allgemeine Informationen
@@ -131,8 +131,8 @@ roomMaterials = Raummaterialien*
 roomNumber = Raum-Nr.
 rooms = Räume
 roomWidth = Breite
-send = Send To DMZ*
-pull = Pull From DMZ*
+send = Zu DMZ senden*
+pull = Aus DMZ laden*
 save = Speichern
 saveOrder = Reihenfolge Speichern
 scars = Narben*
