--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup.properties
@@ -68,7 +68,7 @@ COMMENT = Kommentar
 HEIGHT = Grösse
 WEIGHT = Gewicht
 BMI = Body-Mass-Index
-SCAR = Narbe*
+SCAR = Narbe
 LANGUAGE = Sprache
 ANAMNESIS = Anamnese*
 
