--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup_en.properties
@@ -68,7 +68,7 @@ COMMENT = Comment
 HEIGHT = Height
 WEIGHT = Weight
 BMI = Body-Mass-Index
-SCAR = Scar*
+SCAR = Scar
 LANGUAGE = Language
 ANAMNESIS = Anamnesis*
 
