--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants_en.properties
@@ -67,7 +67,7 @@ export = Export
 exportBellSchedule = Export bell schedule
 female = Female
 field = Field
-filterTitle = Filter Title
+filterTitle = Title filter
 from = From
 gender = Gender
 generalInformation = General Information
