Feature #82 - Included gwt-18n-server library in pom.xml (may be replaced. Seems to not send data from client to server; further investigation needed) - Layouted PDF document generated for standardized patients (proposal)

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
@@ -72,6 +72,7 @@ from = Von
 gender = Geschlecht
 generalInformation = Allgemeine Informationen
 googleMaps = Google maps
+handledConfidentially = Diese Informationen werden vertraulich behandelt.
 height = Grösse
 iban = IBAN
 insideTitle = Gehört zu Titel
@@ -148,6 +149,7 @@ simulationPatients = Simulationspatienten
 slotUntilChange = max. Studenten bis Wechsel
 socialInsuranceNo = SV-Nummer
 specification = Spezifikation
+standardizedPatient = Simulationspatient
 stationLength = Postenlänge
 street = Strasse
 students = Studenten
