--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants_en.properties
@@ -72,6 +72,7 @@ from = From
 gender = Gender
 generalInformation = General Information
 googleMaps = Google maps
+handledConfidentially = Data in this document is handled confidentially.
 height = Height
 iban = IBAN
 insideTitle = Belongs to title
@@ -132,6 +133,7 @@ roomNumber = Room No.
 rooms = Rooms
 roomWidth = Width
 send = Send To DMZ*
+standardizedPatient = Standardized patient
 pull = Pull From DMZ*
 save = Save
 saveOrder = Save Order
