throw exceptions and save check questions answer

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup.properties
@@ -117,3 +117,23 @@ Material = Material
 table_item=table_item
 rich_text_item=rich_text_item
 #End
+
+
+notSetHostAddressException = DMZ_HOST_ADDRESS Init Parameter not set
+connectHostAddressException = Unable to connect to host address 
+httpClientException = HTTPException connecting to DMZ host 
+serializingException = Error serializing Patient
+patientNotExistException = Patient does not exist
+
+syncStandardizedPatientException = Sync StandardizedPatient failed with error message: 
+syncNationalityException = Sync Nationality failed with error message: 
+syncProfessionException = Sync Profession failed with error message: 
+syncDescriptionException = Sync Description failed with error message: 
+syncBankaccountException = Sync Bankaccount failed with error message: 
+syncAnamnesisFormException = Sync AnamnesisForm failed with error message: 
+syncAnamnesisCheckValuesException = Sync AnamnesisCheckValues failed with error message: 
+
+
+exportSuccessful = Export to DMZ Successful
+serverReturndError = Server Returned Error: 
+importSussessful = Import Successful
