--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup_en.properties
@@ -112,3 +112,26 @@ WIDOWED = widowed
 Simpat = Simpat
 Statist = Statist
 Material = Material
+
+
+notSetHostAddressException = DMZ_HOST_ADDRESS Init Parameter not set
+connectHostAddressException = Unable to connect to host address 
+httpClientException = HTTPException connecting to DMZ host
+serializingException = Error serializing Patient
+
+patientNotExistException = Patient does not exist
+
+syncStandardizedPatientException = Sync StandardizedPatient failed with error message: 
+syncNationalityException = Sync Nationality failed with error message: 
+syncProfessionException = Sync Profession failed with error message: 
+syncDescriptionException = Sync Description failed with error message: 
+syncBankaccountException = Sync Bankaccount failed with error message: 
+syncAnamnesisFormException = Sync AnamnesisForm failed with error message: 
+syncAnamnesisCheckValuesException = Sync AnamnesisCheckValues failed with error message: 
+
+exportSuccessful = Export to DMZ Successful
+serverReturndError = Server Returned Error: 
+importSussessful = Import Successful
+    
+	
+
