Feature #93 - Changed the StandardizedPatient view to reflect the changes with anamnesisCheck / anamnesisCheckTitle etc. - moved scar tab to top - implemented tabs - NOTE: temporarily deactivated the filter for answered/unanswered questions

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
@@ -92,6 +92,7 @@ maritalStatus = Zivilstand
 masterData = Stammdaten*
 maxCircuits = max. Parcours
 maxStudents = max. Studenten
+messages = Meldungen
 mobile = Mobiltelefon
 name = Name
 nationalities = Nationalitäten
