--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants_en.properties
@@ -91,6 +91,7 @@ maritalStatus = Marital status
 masterData = Master data*
 maxCircuits = Max. parcours*
 maxStudents = Max. students
+messages = Messages
 mobile = Mobile
 name = Name
 nationalities = Nationalities
