Assignment I (Module 5) and other chagnes.

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
@@ -231,3 +231,4 @@ questionInstruction = Instruction*
 #Assignment E]
 osceBreak=Pausen(k/m/l)
 anamnesisForm = Anamneseformular
+clearAll = Clear All
