Module 5 (Assignment C and E/F)

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
@@ -233,3 +233,7 @@ questionInstruction = Instruction*
 osceBreak=Pausen(k/m/l)
 anamnesisForm = Anamneseformular
 clearAll = Clear All
+# 5C: SPEC START =
+select = Select
+deleteOsceBluePrintPost=Do you want to delete Osce Blueprint ?.
+# 5C: SPEC START =
