--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup.properties
@@ -149,3 +149,9 @@ Closed_Status="Osce_Closed_Status";
 HS=HS
 FS=FS
 # G: SPEC START =
+# 5C: SPEC START
+NORMAL=NORMAL
+BREAK=BREAK
+ANAMNESIS_THERAPY=ANAMNESIS_THERAPY
+PREPARATION=PREPARATION
+# 5C: SPEC END
