--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants_en.properties
@@ -231,4 +231,7 @@ questionName = Question*
 questionInstruction = Instruction*
 #Assignment E]
 clearAll = Clear All
-
+# 5C: SPEC START =
+select = Select
+deleteOsceBluePrintPost=Do you want to delete Osce Blueprint ?.
+# 5C: SPEC START =
