--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants_en.properties
@@ -235,3 +235,18 @@ clearAll = Clear All
 select = Select
 deleteOsceBluePrintPost=Do you want to delete Osce Blueprint ?.
 # 5C: SPEC START =
+
+#Assignment(Day) D
+
+day=Day 1
+presents=presents
+date=Date :
+starttime=Start Time :
+endtime=End Time Max :
+calculation=Calculations
+lunchbreak=Lunch Break :
+lbendtime=End Time :
+student=Students :
+
+# End Assignment(Day) D
+
