--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -231,4 +231,23 @@ questionName = Question*
 questionInstruction = Instruction*
 #Assignment E]
 clearAll = Clear All
+# 5C: SPEC START =
+select = Select
+deleteOsceBluePrintPost=Do you want to delete Osce Blueprint ?.
+# 5C: SPEC START =
 
+#Assignment(Day) D
+
+day=Day 1
+presents=presents
+date=Date :
+starttime=Start Time :
+endtime=End Time Max :
+calculation=Calculations
+lunchbreak=Lunch Break :
+lbendtime=End Time :
+student=Students :
+generate=Generate
+success=Success
+osceDaySuccess=Osce Day Updated successfully
+# End Assignment(Day) D
