sort order by anamnesisCheckTitle

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
@@ -233,3 +233,4 @@ questionInstruction = Instruction*
 osceBreak=Pausen(k/m/l)
 anamnesisForm = Anamneseformular
 clearAll = Clear All
+anamnesisCheckTitle = Text
