--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants_en.properties
@@ -231,4 +231,6 @@ questionName = Question*
 questionInstruction = Instruction*
 #Assignment E]
 clearAll = Clear All
+anamnesisCheckTitle =Text
+
 
