Add save sortOrder

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
@@ -233,3 +233,8 @@ questionInstruction = Instruction*
 osceBreak=Pausen(k/m/l)
 anamnesisForm = Anamneseformular
 clearAll = Clear All
+
+
+enterSortOrderWarn = Please enter a number abouve 0 .
+unSaveOrderWarn = Please save order before ,then move this.
+leavePageWarn = You have not save order , are you sure leave this page ?
