--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants_en.properties
@@ -232,3 +232,6 @@ questionInstruction = Instruction*
 #Assignment E]
 clearAll = Clear All
 
+enterSortOrderWarn = Please enter a number abouve 0 .
+unSaveOrderWarn = Please save order, then move this .
+leavePageWarn = You have not save order , are you sure leave this page ?
