Feature #93 Cleaned up the implementation of AnamnesisCheckTitles, grouping and sorting. - removed AnamnesisCheckTitleDetailsView / Place / etc. - removed QUESTION_TITLE option in AnamnesisCheckTypes - Improved implementation of StandardizedPatientAnamnesisSubView (Tabs get loaded individually, filtering by question answered is re-enabled) - Implemented ordering of AnamnesisChecks by manually typed order numbers - Improved UI response of anamnesisCheckView (tables get loaded upon clicking on corresponding titles, editing tables and orders doesn't reload whole place, ordering titles makes changes to widget order for faster ui response) - Added Edit/delete title functionality

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
@@ -12,6 +12,7 @@ addProfession = Beruf hinzufügen
 addQuestion = Frage hinzufügen
 addRoleTopic = Fachgebiet hinzufügen
 addRoom = Raum hinzufügen
+addTitle = Titel hinzufügen
 addTrait = Merkmal hinzufügen
 addUser = Benutzer hinzufügen
 administration = Systemadministration
@@ -159,6 +160,7 @@ studyYear = SJ
 studyYears = Studienjahr
 telephone = Telefon
 text = Text*
+thisIsTheFirstQuestion = keine (als erste Frage hinzufügen)
 title = Titel
 to = Zu
 topic = Thema*
