--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants_en.properties
@@ -12,6 +12,7 @@ addProfession = Add profession
 addQuestion = Add question
 addRoleTopic = Add field
 addRoom = Add room
+addTitle = Add title
 addTrait = Add trait
 addUser = Add user
 administration = System administration
@@ -159,6 +160,7 @@ studyYear = SY
 studyYears = study year
 telephone = Telephone
 text = Text*
+thisIsTheFirstQuestion = None (this is the first question)
 title = Title
 to = To
 topic=Topic*
