--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -267,4 +267,5 @@ assignTo = Assign To
 enterPatient = Please enter Patient name ...
 patientInformation = Patient in Semester's Information
 close = close
+patientAlreadyAssigned = Patient is already assigned.
 # End MODULE 3
