Changes in Module 3

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -266,4 +266,6 @@ enterPatient = Please enter Patient name ...
 patientInformation = Patient in Semester's Information
 close = close
 patientAlreadyAssigned = Patient is already assigned.
+pleaseSelectRole = Please Select Role
+patientIsNotAccepted = patientIsNotAccepted
 # End MODULE 3
