Changes File in Module 2.

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -269,3 +269,8 @@ patientAlreadyAssigned = Patient is already assigned.
 pleaseSelectRole = Please Select Role
 patientIsNotAccepted = patientIsNotAccepted
 # End MODULE 3
+
+updateOsce=Osce Data Updated sucessfully
+deleteTask=Do you want delete Task?
+warning=Warning
+saveOsceBlueprint=Osce Post Blueprint Saved Successfully.
