--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -271,3 +271,9 @@ patientAlreadyAssigned = Patient is already assigned.
 pleaseSelectRole = Please Select Role
 patientIsNotAccepted = patientIsNotAccepted
 # End MODULE 3
+
+updateOsce=Osce Data Updated sucessfully
+warning=Warning
+deleteTask=Do you want delete Task?
+saveOsceBlueprint=Osce Post Blueprint Saved Successfully.
+
