--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -277,3 +277,6 @@ warning=Warning
 deleteTask=Do you want delete Task?
 saveOsceBlueprint=Osce Post Blueprint Saved Successfully.
 
+#MODULE 6 START
+importstudent = Students import
+#MODULE 6 END
