--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -274,3 +274,7 @@ updateOsce=Osce Data Updated sucessfully
 deleteTask=Do you want delete Task?
 warning=Warning
 saveOsceBlueprint=Osce Post Blueprint Saved Successfully.
+
+#MODULE 6 START
+importstudent = Students import
+#MODULE 6 END
