--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -280,3 +280,20 @@ saveOsceBlueprint=Osce Post Blueprint Saved Successfully.
 #MODULE 6 START
 importstudent = Students import
 #MODULE 6 END
+
+# Issue : 120
+fileDetail = Files
+printFor = Print for 
+basicData = Basic Data
+roleScript = Role script
+standardizedRole = Standardized Role
+optionDetail = Option Details
+roleBaseItemName = Role Base Item Name
+# Issue : 120
+
+#Module 7
+version=Version
+oscedoc=Osce
+starttimedoc=Start Time
+endtimedoc=End Time
+#moduel 7
