Module 3 Task B and other changes

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -297,3 +297,12 @@ oscedoc=Osce
 starttimedoc=Start Time
 endtimedoc=End Time
 #moduel 7
+
+# Module 3 : Task : B
+addAllActive = Add All Active
+onDeleteRoleAssignedToPatient = Can't delete.Patient has assigned Role.
+deletePatientInSemester=Do you want delete Patient Assignment?
+active = Active
+inActive = Inactive
+patientIsNotAvailable = No patient is available with active status.
+# Module 3 : Task : B
