--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -306,3 +306,7 @@ active = Active
 inActive = Inactive
 patientIsNotAvailable = No patient is available with active status.
 # Module 3 : Task : B
+
+#issue 124
+tableSize=Table Size : 
+#issue 124
