Learning Objective Module and Assigment F Files

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -317,3 +317,17 @@ avgOfSPPerPost = Average of SP per post
 securityType = Security Type
 
 # Module 3 : Task : I
+
+#learning objective
+importObjective = Import Objective
+minorBtnLbl=Minor
+majorBtnLbl=Major
+mainClassi=MainClassification
+classiTopic=ClassificationTopic
+skillLevel=SkillLevel
+topicLbl=Topic
+#learning objective
+
+#modul 3 changes {
+backupViewHeading=Pause
+#modul 3 changes }
