--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -329,3 +329,17 @@ topicLbl=Topic
 #modul 3 changes {
 backupViewHeading=Pause
 #modul 3 changes }
+
+#Modulue 8[
+shortBreak=Short Break :
+middleBreak=Middle Break :
+numOfRooms=number of Rooms :
+studentAssignment= Student Assignment
+spAssignment=Standardized Patient Assignment
+examinerName=Examiner Name :
+postType=Post Type:
+spName=SP Name :
+patientNotAssigned=Patient is Not Assigned.
+studentNotAssigned=Student is Not Assigned.
+examinerNotNull=Examiner Cannot be Null.
+#Modulue 8]
