importSP error reporting (OSCE)

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup.properties
@@ -155,3 +155,6 @@ BREAK=BREAK
 ANAMNESIS_THERAPY=ANAMNESIS_THERAPY
 PREPARATION=PREPARATION
 # 5C: SPEC END
+
+err_DialogBoxTitle = Fehler aufgefordert
+err_DialogBoxCloseButton = schließen
