--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup_en.properties
@@ -154,3 +154,6 @@ BREAK=BREAK
 ANAMNESIS_THERAPY=ANAMNESIS_THERAPY
 PREPARATION=PREPARATION
 # 5C: SPEC END
+
+err_DialogBoxTitle = Error prompts
+err_DialogBoxCloseButton = close
