--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -269,7 +269,7 @@ patientInformation = Patient in Semester's Information
 close = close
 patientAlreadyAssigned = Patient is already assigned.
 pleaseSelectRole = Please Select Role
-patientIsNotAccepted = patientIsNotAccepted
+patientIsNotAccepted = Patient is not accepted.
 # End MODULE 3
 
 updateOsce=Osce Data Updated sucessfully
@@ -345,3 +345,8 @@ patientNotAssigned=Patient is Not Assigned.
 studentNotAssigned=Student is Not Assigned.
 examinerNotNull=Examiner Cannot be Null.
 #Modulue 8]
+
+# Module 5 changes {
+warningBreakIsAtEnd=There is a break post at end. Do you want to continue ? 
+confirmationWhenStatusIsChangingFormClosedToFix=Do You Want To Continue ?
+# Module 5 changes }
