TimeTableGenratorTest and Parcour Changes

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -349,4 +349,7 @@ examinerNotNull=Examiner Cannot be Null.
 # Module 5 changes {
 warningBreakIsAtEnd=There is a break post at end. Do you want to continue ? 
 confirmationWhenStatusIsChangingFormClosedToFix=Do You Want To Continue ?
+fixedButtonString=Fixed
+closedButtonString=Close
+reopenButtonString=re-Open
 # Module 5 changes }
