--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -61,6 +61,7 @@ editPatient = Edit simPat
 email = Email
 enterAnswer = Please enter answer...
 enterQuestion = Please enter question...
+error = Error
 examinationSchedule = Examination plan*
 exams = Examinations
 export = Export
@@ -99,6 +100,7 @@ nationality = Nationality
 no = No
 noMatter = Don't care*
 noTitle = Question does not belong to a title.
+noSelection = No Selection
 officeDetails = Office
 order = Order
 osces = Manage OSCEs
@@ -350,3 +352,4 @@ fixedButtonString=Fixed
 closedButtonString=Close
 reopenButtonString=re-Open
 # Module 5 changes }
+examiner=Examiner
