--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants.properties
@@ -259,6 +259,8 @@ student=Students :
 anamnesisCheckTitle = Text
 # 5C: SPEC START =
 select = Select
+animationTime = 150000
+widthSize = 1225
 deleteOsceBluePrintPost=Do you want to delete Osce Blueprint ?.
 # 5C: SPEC START =
 
