--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstants_en.properties
@@ -235,6 +235,8 @@ questionInstruction = Instruction*
 clearAll = Clear All
 # 5C: SPEC START =
 select = Select
+animationTime = 150000
+widthSize = 1225
 deleteOsceBluePrintPost=Do you want to delete Osce Blueprint ?.
 # 5C: SPEC START =
 
