Module 8 bug fix, changes in quick search in Standaradized Patient Screen,css correction

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -356,3 +356,6 @@ closedButtonString=Close
 reopenButtonString=re-Open
 # Module 5 changes }
 examiner=Examiner
+simpatChangeBreak=Simpat Change Break :
+longBreak=Long Break :
+autoSPSuccess=Standardized Patient Assigned Successfully.
