--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -353,3 +353,6 @@ closedButtonString=Close
 reopenButtonString=re-Open
 # Module 5 changes }
 examiner=Examiner
+simpatChangeBreak=Simpat Change Break :
+longBreak=Long Break :
+autoSPSuccess=Standardized Patient Assigned Successfully.
