Correction in Module 3. ColorPicker Modified.

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -359,3 +359,4 @@ examiner=Examiner
 simpatChangeBreak=Simpat Change Break :
 longBreak=Long Break :
 autoSPSuccess=Standardized Patient Assigned Successfully.
+autoAssignmentSuccess=Patients are assigned in Role Successfully.
