--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -300,6 +300,10 @@ starttimedoc=Start Time
 endtimedoc=End Time
 #moduel 7
 
+animationTime = 3000
+widthSize = 1225
+widthMin = 705
+
 # Module 3 : Task : B
 addAllActive = Add All Active
 onDeleteRoleAssignedToPatient = Can't delete.Patient has assigned Role.
