--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -28,6 +28,9 @@ aviableRole = Available roles
 bank = Bank
 bankAccount = Bank account
 basicFilter = Primary filter
+animationTime = 3000
+widthSize = 1225
+widthMin = 705
 bic = BIC
 bindType = Linkage
 birthday = Birth date
