--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -360,3 +360,7 @@ simpatChangeBreak=Simpat Change Break :
 longBreak=Long Break :
 autoSPSuccess=Standardized Patient Assigned Successfully.
 autoAssignmentSuccess=Patients are assigned in Role Successfully.
+autoStudentSuccess=Students are Assigned Successfully.
+autoStudentFailure=Students are not Assigned Successfully.
+autoSPFailure=Standardized Patients are not Assigned Successfully. 
+failure= Failure Occured
