Solution of Module 5 Bug Report

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -368,3 +368,9 @@ autoStudentSuccess=Students are Assigned Successfully.
 autoStudentFailure=Students are not Assigned Successfully.
 autoSPFailure=Standardized Patients are not Assigned Successfully. 
 failure= Failure Occured
+
+# Module 5 bug Report Change
+post=Post
+lunchBreakStart=Lunch Break Start : 
+osceSequence=Osce Sequence : 
+# E Module 5 bug Report Change
