--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
@@ -151,3 +151,11 @@ FS=FS
 
 SIMPLE = SIMPLE 
 FEDERAL_EXAM = FEDERAL EXAM
+
+# Module 5 bug Report Change
+OSCE_SEQUENCES_A=A
+OSCE_SEQUENCES_B=B
+OSCE_SEQUENCES_C=C
+OSCE_SEQUENCES_D=D
+OSCE_SEQUENCES_E=E
+# E Module 5 bug Report Change
