--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/i18n/OsceConstantsWithLookup_en.properties
@@ -157,3 +157,11 @@ PREPARATION=PREPARATION
 
 err_DialogBoxTitle = Error prompts
 err_DialogBoxCloseButton = close
+
+# Module 5 bug Report Change
+OSCE_SEQUENCES_A=A
+OSCE_SEQUENCES_B=B
+OSCE_SEQUENCES_C=C
+OSCE_SEQUENCES_D=D
+OSCE_SEQUENCES_E=E
+# E Module 5 bug Report Change
