Module : 15 , Import eOSCE , Issue of SP

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -436,3 +436,37 @@ enterKeyword=Enter Keyword...*
 #Summonings
 error = Error
 noSelection=No Selection
+
+#eosce
+importeosce=Import eOSCE
+importBtn=Import
+processed=Processed
+unprocessed=Unprocessed
+processedfiles=Processed Files
+unprocessedfiles=Unprocessed Files
+importprocessmsg=Do you want to Delete File After Import?
+eosceerrormsg=Select Atleast One File
+confirmation=Confirmation
+unprocessedmsg=All Processed Files Are Deleted
+fetcherrormsg=Error while Fetching Files From Cloud
+importerror=Error in File Import
+importsuccess=File Imported Succssfully
+processedmsg=All Files Are Processed
+delerror=Error in File Delete
+delsuccess=File Deleted Succssfully
+#eosce
+
+# Module : 15
+bellScheduleUpload = Klingelplan Upload 
+bellScheduleExport = Klingelplan Export
+plusTime = +
+minusTime = -
+bellSchedule = Klingelplan
+moveTime = uhrzeiten verschieben
+minute = minute
+dateHeader = Date
+timeHeader = Time
+toneHeader = Tone
+validateMinute = Please enter minute.
+validatePlusMinus = Please select + or - minute option.
+# Module : 15
