--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
@@ -41,6 +41,15 @@ LESS = less than
 MORE = more than
 #By Spec[
 NATIONALITY = Nationality
+#issue
+PROFESSION_EQUALS = SimPat hat
+PROFESSION_NOT_EQUALS = SimPat hat kein/e
+WORKPERMISSION_EQUALS = SimPat hat
+WORKPERMISSION_NOT_EQUALS = SimPat hat kein/e
+MARITIALSTATUS_EQUALS = SimPat is
+MARITIALSTATUS_NOT_EQUALS = SimPat isn't 
+AGE = Age
+GENDER = Gender
 
 PERPIECE = Per piece*
 PERDAY = Per day*
