Fixed constants display bugs in RoleDetailsView.

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -225,9 +225,9 @@ classiTopic = Classification Topic*
 topicLbl = Topic*
 skillLevel = Skill Level*
 #CheckListSubView/CheckList/AddCkeckListTopic
-checkList = Checklist*
-addCheckListTopic = Add CheckList Topic*
-addCheckListQuestion = Add CheckList Question*
+checkList = Checkliste*
+addCheckListTopic = Checklistengruppe hinzufügen*
+addCheckListQuestion = Frage hinzufügen*
 topicDescription = Description*
 checklistTopic = Topic*
 #CheckListSubView/CheckList/ImportTopic
