Changes For Dock Menu and File Path Constant

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -455,12 +455,12 @@ delsuccess=File Deleted Succssfully
 #eosce
 
 # Module : 15
-bellScheduleUpload = Klingelplan Upload 
-bellScheduleExport = Klingelplan Export
+bellScheduleUpload = Bell Schedule Upload 
+bellScheduleExport = Bell Schedule Export
 plusTime = +
 minusTime = -
-bellSchedule = Klingelplan
-moveTime = uhrzeiten verschieben
+bellSchedule = Bell Schedule
+moveTime = Move Time
 minute = minute
 dateHeader = Date
 timeHeader = Time
